# time-wallet

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SLIP0010_CRATES_RESEARCH.md  deny.toml
.github/: copilot-instructions.md
.github/workflows/: release.yml
core/: Cargo.toml
core/examples/: hot_state_demo.rs  test_snapshot_issue.rs
core/src/: block.rs  chain_selection.rs  checkpoint.rs  lib.rs  masternode_tx.rs  masternode_uptime.rs  mempool.rs  merkle.rs  state.rs  time_sync.rs  utxo_state_manager.rs  vdf.rs  vdf_integration.rs
core/tests/: utxo_snapshot_persistence_test.rs
crypto/: Cargo.toml
crypto/src/: lib.rs
docs/: ADDRESS_FORMAT.md  ARCHITECTURE.md  BUILD.md  RPC_PROTOCOL.md  WALLET_USAGE.md
mempool/src/: lib.rs  priority_queue.rs  resource_monitor.rs
network/: Cargo.toml
network/examples/: discover_peers.rs
network/src/: connection.rs  connection_v2.rs  consensus.rs  discovery.rs  manager.rs  message_handler.rs  peer_exchange.rs  peer_info.rs  protocol_v2.rs  quarantine.rs  rate_limiter.rs  sync.rs  sync_gate.rs  sync_messages.rs  tx_sync.rs  unified_connection.rs  utxo_handler.rs  voting.rs
scripts/: build-installer.bat  installer.iss
src/core/examples/: treasury_demo.rs
src/core/src/: block.rs  constants.rs  db.rs  finalizer.rs  masternode_uptime.rs  merkle.rs  snapshot.rs  snapshot_service.rs  state.rs  time_validator.rs  transaction.rs  treasury_manager.rs  utxo_disk_backed.rs  utxo_locker.rs  utxo_set.rs
src/core/tests/: security_tests.rs
src/crypto/: Cargo.toml
src/mempool/: Cargo.toml
src/network/: build.rs
src/network/src/: config.rs  connection.rs  connection.rs.bak  connection_error_fix.patch  discovery.rs  error.rs  heartbeat.rs  lib.rs  lock_ordering.rs  manager.rs.bak  message_auth.rs  protocol.rs  protocol_v2.rs  rate_limiter.rs  sync_manager.rs  time_sync.rs  tx_broadcast.rs  upnp.rs  utxo_sync.rs
src/network/tests/: integration_tests.rs
src/wallet/: Cargo.toml
src/wallet-gui/: Cargo.toml  MNEMONIC_UI_FLOW.md  STARTUP_FLOW_UPDATE.md
src/wallet-gui/src/: config.rs  config_new.rs  encryption.rs  hybrid_client.rs  main.rs  masternode_client.rs  mnemonic_ui.rs  monitoring.rs  password_ui.rs  peer_manager.rs  protocol_client.rs  rate_limiter.rs  simple_client.rs  tcp_protocol_client.rs  timeout_util.rs  utxo_manager.rs  wallet_manager.rs  ws_client.rs
src/wallet-gui/tests/: network_integration_test.rs
src/wallet/examples/: full_transaction_test.rs  mnemonic_wallet_demo.rs  pin_biometric.rs  wallet_demo.rs  wallet_usage.rs
src/wallet/src/: address.rs  biometric.rs  lib.rs  mnemonic.rs  p2p_client.rs  pin.rs  wallet.rs
wallet/: Cargo.toml  SECURITY_IMPLEMENTATION_COMPLETE.md  WALLET_SECURITY.md
wallet-gui/: CLEANUP_REPORT.md  Cargo.toml  README.md  build.rs
wallet-gui/examples/: basic_wallet.rs
wallet-gui/src/: app.rs  config.rs  config_new.rs  coordinator.rs  encryption.rs  events.rs  hybrid_client.rs  main.rs  masternode_client.rs  network.rs  peer_discovery.rs  service.rs  simple_client.rs  state.rs  tcp_protocol_client.rs  ui_components.rs  wallet_dat.rs  wallet_db.rs  wallet_manager.rs  wallet_sync.rs  ws_client.rs
wallet-gui/src/view/: connections.rs  masternodes.rs  mod.rs  overview.rs  receive.rs  send.rs  settings.rs  tools.rs  transactions.rs  welcome.rs
wallet-gui/tests/: integration_test.rs  network_integration_test.rs
wallet/examples/: auto_lock.rs  encrypted_wallet.rs  full_transaction_test.rs  wallet_demo.rs  wallet_usage.rs  wallet_with_qr.rs
wallet/src/: address.rs  auto_lock.rs  encryption.rs  keypair.rs  lib.rs  metadata_db.rs  mnemonic.rs  transaction.rs  wallet.rs
