[workspace]
members = [
    "src/core",
    "src/wallet",
    "src/network",
    "src/mempool",
    "src/wallet-gui",
]
default-members = ["src/wallet-gui"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["TIME Coin Contributors"]
license = "BUSL-1.1"

[workspace.dependencies]
tokio = { version = "1.48", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
sha3 = "0.10"
hex = "0.4"
thiserror = "2.0"
anyhow = "1.0"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
clap = { version = "4.5", features = ["derive"] }
toml = "0.9"
local-ip-address = "0.6"
owo-colors = "4.0"
md5 = "0.8"
ed25519-dalek = { version = "2.0", features = ["rand_core", "serde"] }
rand = "0.9"
trust-dns-resolver = "0.23"
bincode = "1.3"
sled = "0.34"
dashmap = "6.1"
uuid = { version = "1.0", features = ["v4"] }
parking_lot = "0.12"
png = "0.18"
rand_chacha = "0.9"
rand_core = "0.9"
socket2 = "0.6"
sysinfo = "0.32"
crossterm = "0.29"
futures = "0.3"
# rocksdb = "0.21"  # Disabled for now - requires LLVM/clang dev headers (Phase 2)
flate2 = "1.0"
rayon = "1.10"

[profile.release]
opt-level = 3           # Maximum optimization (speed)
lto = "thin"            # Thin LTO (faster compile, still optimized)
codegen-units = 16      # Parallel compilation (faster builds)
strip = true            # Strip symbols for smaller binary
panic = "abort"         # Remove unwinding code