[package]
name = "time-core"
license = "BUSL-1.1"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
sled = "0.34"
# rocksdb = { workspace = true }  # Phase 2 - requires LLVM/clang
bincode = { workspace = true }
flate2 = { workspace = true }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
sha2.workspace = true
sha3.workspace = true
hex = "0.4"
lru = "0.12"
ed25519-dalek = "2.1"
log = "0.4"
tokio = { workspace = true, features = ["rt", "macros"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3.14"
