[package]
name = "time-crypto"
license = "BUSL-1.1"
version = "0.1.0"
edition = "2021"

[dependencies]
# rand_core = { version = "0.9", features = ["os_rng"] }  # disabled: use rand::rngs::OsRng (rand 0.8)
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
sha2 = "0.10"
hex = "0.4"
thiserror = "2.0"
rand = "0.8"
