[package]
name = "wallet-gui"
version = "0.1.0"
edition = "2021"
license = "BUSL-1.1"

[dependencies]
# GUI framework
eframe = "0.31"
egui = "0.31"
egui_extras = { version = "0.31", features = ["image"] }
image = { version = "0.25", default-features = false, features = ["png"] }

# Async runtime
tokio = { workspace = true }
tokio-util = "0.7"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
serde_bytes = "0.11"

# Cryptography
rand = { workspace = true }
# SECURITY FIX: Add AES-256-GCM encryption for wallet
aes-gcm = "0.10"
argon2 = "0.5"
zeroize = { version = "1.8", features = ["derive"] }

# Networking
reqwest = { workspace = true }
tokio-tungstenite = "0.24"
futures-util = "0.3"

# Logging
log = "0.4"
env_logger = "0.11"

# Date/Time
chrono = { workspace = true }

# Database
sled = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Config
toml = { workspace = true }

# File system utilities
dirs = "6.0"

# Encoding
base64 = "0.22"

# QR code generation
qrcode = { version = "0.14", default-features = false }

# PDF generation for paper backups
printpdf = "0.7"

# Cross-platform file opener
open = "5"

# Local wallet dependency from parent project
wallet = { path = "../wallet", version = "0.1.0" }

