[package]
name = "wallet-gui"
version.workspace = true
edition = "2021"
license = "BUSL-1.1"

[[bin]]
name = "time-wallet"
path = "src/main.rs"

[dependencies]
# GUI framework
eframe = "0.31"
egui = "0.31"
egui_extras = { version = "0.31", features = ["image"] }
egui_plot = "0.31"
image = { version = "0.25", default-features = false, features = ["png"] }

# Async runtime
tokio = { workspace = true, features = ["rt-multi-thread", "net", "time", "io-util"] }
tokio-util = "0.7"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
serde_bytes = "0.11"

# Cryptography
rand = { workspace = true }
aes-gcm = { workspace = true }
argon2 = { workspace = true }
zeroize = { workspace = true }
# ECDH key exchange for encrypted memos (Ed25519 → X25519)
ed25519-dalek = { workspace = true }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
curve25519-dalek = "4.1"

# Networking
reqwest = { workspace = true }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
rustls = { version = "0.23", features = ["ring"] }

# Logging
log = { workspace = true }
env_logger = { workspace = true }

# Date/Time
chrono = { workspace = true }

# Database
sled = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Config
toml = { workspace = true }

# File system utilities
dirs = "6.0"

# Encoding
base64 = "0.22"
hex = { workspace = true }
sha2 = { workspace = true }

# QR code generation
qrcode = { version = "0.14", default-features = false }

# QR code scanning (webcam)
nokhwa = { version = "0.10", features = ["input-native"] }
rqrr = "0.10"

# PDF generation for paper backups
printpdf = "0.7"

# Cross-platform file opener
open = "5"

# Single-instance enforcement
fs4 = "0.13"

# Clipboard access (read) for context menu paste
arboard = { version = "3", default-features = false }

# Native file dialogs
rfd = "0.15"

# Local wallet dependency from parent project
wallet = { path = "../wallet", version = "0.6.4" }
egui-phosphor = "0.9"

