[package]
name = "wallet"
license = "BUSL-1.1"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
ed25519-dalek = { version = "2", features = ["rand_core"] }
hmac = "0.12"
rand = "0.8"
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
sha2 = "0.10"
num-bigint = "0.4"
hex = "0.4"
thiserror = "2.0"
chrono = "0.4"
bip39 = { version = "2.2", features = ["serde", "rand"] }
qrcode = "0.14"
sled = "0.34"
tokio = { workspace = true }
log = "0.4"

# Encryption dependencies
aes-gcm = "0.10"
argon2 = { version = "0.5", features = ["std"] }
zeroize = { version = "1.7", features = ["derive"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
env_logger = "0.11"
time-core = { version = "0.1.0", path = "../core" }
time-mempool = { version = "0.1.0", path = "../mempool" }