[package]
name = "time-mempool"
version = "0.1.0"
edition = "2021"
license = "BUSL-1.1"

[dependencies]
time-core = { version = "0.1.0", path = "../core" }
tokio = { version = "1.41", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
sha2 = "0.10"

sysinfo = "0.32"
[dev-dependencies]
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
sha2 = "0.10"
